// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignmentBaseline renders 0 1`] = `
Array [
  .c0 {
  alignment-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders function 1`] = `
Array [
  .c0 {
  alignment-baseline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: has;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders invalid theme path 1`] = `
Array [
  .c0 {
  alignment-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders negative number 1`] = `
Array [
  .c0 {
  alignment-baseline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    alignment-baseline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    alignment-baseline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    alignment-baseline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    alignment-baseline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    alignment-baseline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    alignment-baseline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    alignment-baseline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    alignment-baseline: July;
  }
}

@media April {
  .c0 {
    alignment-baseline: August;
  }
}

@media January {
  .c0 {
    alignment-baseline: September;
  }
}

@media April {
  .c0 {
    alignment-baseline: November;
  }
}

@media June {
  .c0 {
    alignment-baseline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    alignment-baseline: July;
  }
}

@media April {
  .c0 {
    alignment-baseline: August;
  }
}

@media January {
  .c0 {
    alignment-baseline: September;
  }
}

@media April {
  .c0 {
    alignment-baseline: November;
  }
}

@media June {
  .c0 {
    alignment-baseline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    alignment-baseline: January;
  }
}

@media April {
  .c0 {
    alignment-baseline: December;
  }
}

@media January {
  .c0 {
    alignment-baseline: April;
  }
}

@media April {
  .c0 {
    alignment-baseline: May;
  }
}

@media June {
  .c0 {
    alignment-baseline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    alignment-baseline: January;
  }
}

@media April {
  .c0 {
    alignment-baseline: December;
  }
}

@media January {
  .c0 {
    alignment-baseline: April;
  }
}

@media April {
  .c0 {
    alignment-baseline: May;
  }
}

@media June {
  .c0 {
    alignment-baseline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders postitive number 1`] = `
Array [
  .c0 {
  alignment-baseline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders string 1`] = `
Array [
  .c0 {
  alignment-baseline: July;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: July;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: June;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`alignmentBaseline renders valid theme path 1`] = `
Array [
  .c0 {
  alignment-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  alignment-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
